# snapVM

./: .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES_v0.1.0.md  business_rules_snapvm_mvp.md  context-and-rules.md  init.sh  requirements.txt
.agents/steering/: business-rules-summary.md  codebase-map.md
.kiro/skills/snapvm-orchestrator/: SKILL.md
.kiro/steering/: codebase-map.md  project-overview.md
Codigo/: .gitignore  README.md
Codigo/benchmark/: Dockerfile
Codigo/docs/: concepts.md  overview.md  roadmap.md
Codigo/experiments/: Dockerfile  README.md  init.sh  requirements.txt  setup.sh
Codigo/scripts/: run_firecracker_benchmark.sh  setup_firecracker_assets.sh
Codigo/snapvm/: README.md  pyproject.toml
Codigo/snapvm/snapvm_mcp/: server.py
Divulgacao/Apresentacao/: README.md
Divulgacao/Video/: README.md
Documentacao/: README.md
benchmark/: Dockerfile  README.md  pom.xml
benchmark/docs/: DOCKER-BENCHMARK.md
benchmark/scripts/: generate_sales_csv.sh
docs/: concepts.md  overview.md  roadmap.md
docs/experiments/: 01-baseline-benchmarks.md  02-llm-agent-recovery.md  03-incremental-optimization.md  1.first-snapshot.md  2.environment-rollback.md  3.parallel-vm.md  orchestrator-v1-roadmap.md
docs/firecracker-docs/: README.md  snapshot-implementation.md  snapshot-management.md
examples/firecracker-snapshot-rollback/: README.md
src/: server.js
src/orchestrator/: agent.py  contract.py  firecracker_client.py  main.py  network.py  snapshot.py
tests/: test_orchestrator_v1.py
(+82 files in other folders)
